--- a/src/frontend/components/consumers/ProductItem/ProductItem.module.scss
+++ b/src/frontend/components/consumers/ProductItem/ProductItem.module.scss
@@ -1,13 +1,9 @@
-@import '../../../../../src/styles/variables';
+@import "../../../../../src/styles/variables";
 
 .item {
   border-radius: 10px;
 
-  .cardImage {
-  }
-
   .information {
-
     .title {
       text-align: left;
       color: $text-color;
@@ -25,13 +21,18 @@
         color: $text-color;
         font-size: 12px;
         font-weight: 400;
+
+        span {
+          color: red;
+          margin-right: 0.5rem;
+          text-decoration: line-through;
+        }
       }
 
       .unit {
-        color: #AFAFAF;
-        font-size: 8px;
+        color: #afafaf;
+        font-size: 12px;
       }
     }
-
   }
 }
