--- a/src/frontend/pages/consumers/ProductPage/ProductPage.module.scss
+++ b/src/frontend/pages/consumers/ProductPage/ProductPage.module.scss
@@ -45,6 +45,12 @@
       color: $text-color;
       font-size: 20px;
       font-weight: 500;
+
+      span {
+        color: red;
+        margin-right: 0.5rem;
+        text-decoration: line-through;
+      }
     }
 
     .measure {
