--- a/src/frontend/components/consumers/CartItem/CartItem.module.scss
+++ b/src/frontend/components/consumers/CartItem/CartItem.module.scss
@@ -76,10 +76,24 @@
     }
   }
 
-  .sum {
+  .actionSum {
+    bottom: 17px;
+    color: red;
     position: absolute;
     right: 11px;
+
+    span {
+      color: $text-color;
+      font-size: 14px;
+      margin-right: 0.5rem;
+      text-decoration: line-through;
+    }
+  }
+
+  .sum {
     bottom: 17px;
+    position: absolute;
+    right: 11px;
   }
 
   .deleteIcon {
