--- a/src/frontend/components/consumers/OrderPage/Order/OrderForm/OrderForm.module.scss
+++ b/src/frontend/components/consumers/OrderPage/Order/OrderForm/OrderForm.module.scss
@@ -64,6 +64,13 @@
       }
     }
 
+    .labelSelectDisabled {
+      color: #888;
+      margin-top: 0.5rem;
+      display: block;
+      width: 100%;
+    }
+
     .select {
       background-color: $bg-color;
       margin: 0.5rem 0;
