--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,14 @@
 $base-white: #ffffff;
 $dark-gray: #3a3939;
 $light-gray: #949393;
-$red: #FF0000FF;
+$red: #ff0000ff;
 $text-color: #000;
 $description-color: #787676;
 $bg-color: #efefef;
-$cart-item-bg: #D9D9D9;
+$cart-item-bg: #d9d9d9;
 $measure-color: #929292;
+$icons-color: #000;
+
+//sizes
+
+$sm: 10px;
