--- a/src/frontend/pages/consumers/CategoriesPage/CategoriesPage.module.scss
+++ b/src/frontend/pages/consumers/CategoriesPage/CategoriesPage.module.scss
@@ -1,4 +1,6 @@
 @import "../../../../styles/responsive";
+@import "../../../../styles/mixins";
+@import "../../../../styles/variables";
 
 .categories {
   width: 100%;
@@ -15,6 +17,7 @@
     }
 
     .products {
+      @include wrapper;
       display: grid;
       gap: 20px;
       grid-template-columns: repeat(2, 1fr);
