--- a/src/frontend/pages/consumers/ProductPage/ProductPage.module.scss
+++ b/src/frontend/pages/consumers/ProductPage/ProductPage.module.scss
@@ -27,14 +27,8 @@
 
     .heartIconContainer {
       position: absolute;
-      top: 6px;
-      right: 6px;
-      width: 32px;
-      height: 32px;
-
-      .heartIcon {
-        object-fit: cover;
-      }
+      top: 1rem;
+      right: 1rem;
     }
   }
 
