--- a/src/frontend/pages/consumers/CategoriesPage/CategoriesPage.module.scss
+++ b/src/frontend/pages/consumers/CategoriesPage/CategoriesPage.module.scss
@@ -3,7 +3,7 @@
 @import "../../../../styles/variables";
 
 .categories {
-  width: 100%;
+  padding-bottom: 5em;
 
   .category {
     padding: 2em;
