--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -27,7 +27,7 @@ $color-green-3: #78cd7d; // button bg
 $color-green-dark-1: #6ca170; // input focus
 $color-green-dark-2: #67b06c; // button bg
 
-$color-red-1: #f32f04; // input border
+$color-red-1: #f32f04; // input border, error
 
 //sizes
 
