--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -29,6 +29,8 @@ $color-green-dark-2: #67b06c; // button bg
 
 $color-red-1: #f32f04; // input border, error
 
+$burger-menu-screen-width: 900px;
+
 //sizes
 
 $sm: 10px;
