--- a/src/frontend/components/consumers/NavBar/NavBar.module.scss
+++ b/src/frontend/components/consumers/NavBar/NavBar.module.scss
@@ -2,125 +2,152 @@
 @import "../../../../styles/mixins";
 @import "../../../../../src/styles/variables";
 
-.navBar {
+.header {
   position: relative;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  background-color: $base-white;
-  padding: 10px 0;
+  z-index: 50;
 
-  img {
-    cursor: pointer;
-  }
+  .headerContainer {
+    border-bottom: 1px solid #999;
+    padding: 1em 0;
 
-  .content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 29px;
-    @include wrapper;
-
-    .navigation {
-      position: absolute;
-      left: 50%;
-      transform: translate(-50%);
-      top: 100%;
-      display: flex;
-      flex-direction: column;
+    .headerItems {
       align-items: center;
-      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      @include wrapper;
 
-      .list {
+      img {
+        cursor: pointer;
+      }
+
+      .burgerContainer {
+        margin-right: 1em;
         display: flex;
-        flex-direction: column;
-        gap: 15px;
-        min-height: 100vh;
-        background-color: $base-white;
-        min-width: 100vw;
-        padding-top: 30px;
 
-        .item {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          border: 2px solid $bg-color;
-          background-color: $bg-color;
-          border-radius: 42px;
-          margin-right: 16px;
-          margin-left: 16px;
-          padding: 14px 21px;
-          color: #000;
-          font-size: 14px;
-          font-weight: 400;
-          @include md-min {
-            margin-right: 40px;
-            margin-left: 40px;
-          }
-          @include xl-min {
-            margin-right: 60px;
-            margin-left: 60px;
-          }
-          &:hover {
-            background-color: white;
-            border: 2px solid $bg-color;
-          }
+        @media screen and (min-width: $burger-menu-screen-width) {
+          display: none;
         }
       }
 
-      &.hidden {
-        display: none;
-        width: 0;
-        height: 0;
+      .logo {
+        cursor: pointer;
+        color: $color-gray-dark-1;
+        font-size: 24px;
+        font-weight: 400;
+        text-decoration: none;
+      }
+    }
+  }
+
+  .navigation {
+    background-color: $color-bg-light-1;
+    border-bottom: 1px solid #999;
+    padding: 1em 0;
+    position: absolute;
+    width: 100%;
+    @media screen and (min-width: $burger-menu-screen-width) {
+      padding: 0.5em 0;
+      position: relative;
+    }
+
+    .list {
+      display: flex;
+      flex-direction: column;
+      gap: 1em;
+      width: 100%;
+      @include wrapper;
+      @media screen and (min-width: $burger-menu-screen-width) {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 2em;
+        justify-content: center;
       }
 
-      &.visible {
+      > a {
+        text-decoration: none;
+      }
+
+      .item {
+        align-items: center;
+        background-color: $color-green-1;
+        border: none;
+        border-radius: 3em;
+        color: $color-gray-dark-1;
         display: flex;
-        width: 0;
-        height: 0;
+        font-size: 1em;
+        justify-content: space-between;
+        padding: 0.5em 1em;
+        @media screen and (min-width: $burger-menu-screen-width) {
+          background-color: transparent;
+          padding: 0;
+
+          > img {
+            display: none;
+          }
+        }
+
+        &:hover {
+          background-color: $color-green-3;
+          @media screen and (min-width: $burger-menu-screen-width) {
+            background-color: transparent;
+          }
+        }
       }
     }
 
+    &.hidden {
+      display: none;
+      @media screen and (min-width: $burger-menu-screen-width) {
+        display: flex;
+      }
+    }
+
+    &.visible {
+      display: flex;
+    }
+  }
+
+  .searchContainer {
+    background-color: $color-white;
+    border-bottom: 1px solid #999;
+    left: 0;
+    padding-bottom: 1em;
+    padding-top: 1em;
+    position: absolute;
+    top: 100%;
+    width: 100%;
+
     .search {
-      background-color: $base-white;
-      position: absolute;
       display: flex;
       flex-direction: column;
-      font-size: 16px;
       justify-content: center;
-      left: 0;
-      top: 100%;
+      gap: 1em;
       width: 100%;
+      @include wrapper;
       @include cwd-min(420px) {
         flex-direction: row;
       }
 
       input[type="text"] {
-        border-bottom: 1px solid #555;
-        display: inline-block;
-        margin: 1rem;
-        text-indent: 0.5em;
+        @include input-1;
+        font-size: 1rem;
+        padding: 0.5rem;
       }
 
       input[type="submit"] {
-        background-color: $bg-color;
-        border-radius: 1em;
-        cursor: pointer;
-        display: inline-block;
-        margin: 1rem;
-        padding: 0.5em 2em;
-        &:hover {
-          background-color: #2c742f;
-        }
+        @include button-1;
+        border-radius: 0.75rem;
+        font-size: 1rem;
+        padding: 0.5rem;
       }
     }
 
-    .logo {
-      cursor: pointer;
-      font-size: 24px;
-      color: $text-color;
-      font-weight: 400;
+    &.hidden {
+      display: none;
+    }
+
+    &.visible {
+      display: flex;
     }
   }
 }
