--- a/src/frontend/pages/consumers/ProductPage/ProductPage.module.scss
+++ b/src/frontend/pages/consumers/ProductPage/ProductPage.module.scss
@@ -4,22 +4,40 @@
 
 .productCard {
   @include wrapper;
-  margin-top: 16px;
-  margin-bottom: 24px;
+  display: grid;
+  justify-content: center;
+  margin-top: 4em;
+  margin-bottom: 6em;
+  width: 100%;
+  @media screen and (min-width: 768px) {
+    gap: 1em;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, auto);
+  }
 
   .productName {
-    color: $text-color;
-    font-size: 20px;
-    font-weight: 400;
-    margin-bottom: 9px;
+    display: none;
+    @media screen and (min-width: $burger-menu-screen-width) {
+      color: $color-gray-dark-1;
+      display: block;
+      font-size: 1.5em;
+      font-weight: 500;
+      @media screen and (min-width: 768px) {
+        grid-column: 2/3;
+        grid-row: 1/2;
+      }
+    }
   }
 
   .imageContainer {
-    margin-bottom: 15px;
     height: 320px;
     max-width: 600px;
     min-width: 240px;
     position: relative;
+    @media screen and (min-width: 768px) {
+      grid-column: 1/2;
+      grid-row: 1/-1;
+    }
 
     .imageProduct {
       object-fit: cover;
@@ -34,14 +52,18 @@
 
   .priceInformation {
     text-align: left;
+    @media screen and (min-width: 768px) {
+      grid-column: 2/3;
+      grid-row: 2/3;
+    }
 
     .price {
       color: $text-color;
-      font-size: 20px;
+      font-size: 1.5rem;
       font-weight: 500;
 
       span {
-        color: red;
+        color: $color-red-1;
         margin-right: 0.5rem;
         text-decoration: line-through;
       }
@@ -54,52 +76,53 @@
 
       .measureLabel {
         border: 1px solid #777;
+        border-radius: 1rem;
         color: #777;
         cursor: pointer;
+        font-size: 1.125rem;
         padding: 0.5rem 1rem;
       }
 
       .measureRadioBtn:checked + label {
-        border: 2px solid #000;
-        color: #000;
+        border: 2px solid $color-gray-dark-1;
+        color: $color-gray-dark-1;
       }
     }
   }
 
   .button {
-    cursor: pointer;
-    width: 100%;
-    color: $text-color;
-    font-size: 20px;
-    font-weight: 400;
-    border-radius: 32px;
-    background: $bg-color;
-    padding: 16px 0;
-    text-align: center;
-    margin-top: 13px;
-    margin-bottom: 30px;
+    @include button-1;
+    @media screen and (min-width: 768px) {
+      grid-column: 2/3;
+      grid-row: 4/5;
+    }
   }
 
   .characteristic {
-    border-radius: 8px;
-    border: 1px solid $text-color;
-    padding: 12px;
+    border-radius: 1em;
+    border: 1px solid $color-gray-dark-1;
+    padding: 1em;
+    @media screen and (min-width: 768px) {
+      border: none;
+      grid-column: 2/3;
+      grid-row: 3/4;
+    }
 
     .headline {
-      color: $text-color;
-      font-size: 20px;
+      color: $color-gray-dark-1;
+      font-size: 1.25em;
       font-weight: 400;
-      margin-bottom: 16px;
+      margin-bottom: 1em;
     }
 
     .heading {
       display: flex;
       align-items: center;
-      gap: 6px;
+      gap: 0.5em;
 
       .title {
-        color: $text-color;
-        font-size: 14px;
+        color: $color-gray-dark-1;
+        font-size: 0.875em;
         font-weight: 400;
       }
     }
@@ -107,15 +130,15 @@
     .description {
       max-width: 170px;
       color: $text-color;
-      font-size: 12px;
+      font-size: 0.875em;
       font-weight: 400;
-      margin-top: 8px;
-      margin-bottom: 8px;
-      margin-left: 20px;
+      margin-top: 0.5em;
+      margin-bottom: 0.5em;
+      margin-left: 1.25em;
     }
   }
+}
 
-  .productList {
-    margin-top: 30px;
-  }
+.productList {
+  @include wrapper;
 }
