--- a/src/frontend/components/consumers/CartItem/CartItem.module.scss
+++ b/src/frontend/components/consumers/CartItem/CartItem.module.scss
@@ -2,108 +2,113 @@
 @import "../../../../../src/styles/mixins";
 
 .item {
+  background-color: #eee;
+  padding: 1em;
   position: relative;
-  display: flex;
-  gap: 14px;
-  background-color: $cart-item-bg;
-  padding: 13px 3px 13px 8px;
 
-  .container {
-    position: relative;
-    width: 96px;
-    height: 86px;
+  .info {
+    display: flex;
+    width: 100%;
 
-    .cardImage {
-      object-fit: cover;
+    .imgContainer {
+      height: 120px;
+      margin-right: 1em;
+      position: relative;
+      width: 120px;
+
+      .cardImage {
+        object-fit: cover;
+      }
+    }
+
+    .information {
+      position: relative;
+
+      a {
+        text-decoration: none;
+      }
+
+      .title {
+        color: $color-gray-dark-1;
+        font-size: 1.125em;
+        font-weight: 500;
+      }
+
+      .measure {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.75rem;
+        margin: 1rem 0;
+
+        .measureLabel {
+          border: 1px solid #777;
+          color: #777;
+          cursor: pointer;
+          padding: 0.2rem 0.5rem;
+        }
+
+        .measureRadioBtn:checked + label {
+          border: 2px solid $color-gray-dark-1;
+          color: $color-gray-dark-1;
+        }
+      }
     }
   }
 
-  .information {
-    position: relative;
+  .price {
+    align-items: center;
     display: flex;
-    flex-direction: column;
-
-    .title {
-      font-size: 14px;
-      font-weight: 500;
-      line-height: 18px;
-      letter-spacing: 0.5px;
-      margin-bottom: 4px;
-    }
-
-    .measure {
-      display: flex;
-      gap: 0.5rem;
-      margin: 1rem 0;
-
-      .measureLabel {
-        border: 1px solid #777;
-        color: #777;
-        cursor: pointer;
-        padding: 0.2rem 0.5rem;
-      }
-
-      .measureRadioBtn:checked + label {
-        border: 2px solid #000;
-        color: #000;
-      }
-    }
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 1em;
 
     .counter {
       align-items: center;
       display: flex;
+      flex-direction: row;
 
       .counterButton {
         align-items: center;
-        background-color: #aaa;
+        background-color: $color-green-1;
+        border: none;
         border-radius: 50%;
+        cursor: pointer;
         display: flex;
-        font-size: 22px;
         justify-content: center;
-        height: 26px;
-        width: 26px;
-
+        padding: 0.5rem;
         &:hover {
-          background-color: #999;
+          background-color: $color-green-3;
         }
       }
 
       .counterValue {
         color: $text-color;
-        font-size: 18px;
-        margin: 0 0.5rem;
+        font-size: 1.25rem;
+        margin: 0 0.75rem;
       }
     }
-  }
 
-  .actionSum {
-    bottom: 17px;
-    color: red;
-    position: absolute;
-    right: 11px;
+    .actionSum {
+      font-size: 1.25rem;
+      color: $color-red-1;
 
-    span {
-      color: $text-color;
-      font-size: 14px;
-      margin-right: 0.5rem;
-      text-decoration: line-through;
+      span {
+        color: $text-color;
+        font-size: 0.875rem;
+        margin-right: 0.5rem;
+        text-decoration: line-through;
+      }
     }
-  }
 
-  .sum {
-    bottom: 17px;
-    position: absolute;
-    right: 11px;
+    .sum {
+      font-size: 1.25rem;
+    }
   }
 
   .deleteIcon {
     cursor: pointer;
     position: absolute;
-    top: 19px;
-    right: 10px;
-
-    &:hover {
-      opacity: 0.5;
-    }
+    top: 1em;
+    right: 1em;
   }
 }
