--- a/src/frontend/pages/consumers/IdentificationPage/login.module.scss
+++ b/src/frontend/pages/consumers/IdentificationPage/login.module.scss
@@ -2,12 +2,12 @@
 @import "../../../../styles/mixins";
 .container {
   @include wrapper;
-  .nav-fomr {
+  .nav_form {
     margin-top: 24px;
     display: flex;
     justify-content: space-between;
   }
-  .google-auth {
+  .google_auth {
     display: flex;
     flex-direction: column;
     margin-top: 24px;
@@ -47,5 +47,8 @@
     button {
       @include button-1;
     }
+  }
+  p {
+    @include invalidData;
   }
 }
