made register form errors red color and ukrainian

--- a/src/frontend/pages/consumers/IdentificationPage/login.module.scss
+++ b/src/frontend/pages/consumers/IdentificationPage/login.module.scss
@@ -1,5 +1,5 @@
-@import "../../../../styles/responsive";
-@import "../../../../styles/mixins";
+@import "@/styles/responsive";
+@import "@/styles/mixins";
 .container {
   @include wrapper;
   .nav_form {
