--- a/src/frontend/pages/consumers/AccountPage/AccountPage.module.scss
+++ b/src/frontend/pages/consumers/AccountPage/AccountPage.module.scss
@@ -1,3 +1,17 @@
+@import "../../../../../src/styles/variables";
+@import "../../../../../src/styles/mixins";
+@import "../../../../../src/styles/responsive";
+
 .container {
   width: 100%;
+  .accoyntData {
+    @include wrapper;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    width: 100%;
+    @include lg-min {
+      flex-direction: row;
+    }
+  }
 }
