--- a/src/frontend/pages/consumers/CartPage/CartPage.module.scss
+++ b/src/frontend/pages/consumers/CartPage/CartPage.module.scss
@@ -44,6 +44,28 @@
   .productsWrapper {
     flex: 1 1 auto;
     margin-top: 3em;
+
+    .products {
+      display: grid;
+      gap: 2em;
+      list-style: none;
+      @include wrapper;
+      @include md-min {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @include lg-min {
+        grid-template-columns: repeat(3, 1fr);
+      }
+
+      .warning {
+        text-align: center;
+        margin: 30px 0;
+      }
+
+      .cartItem {
+        position: relative;
+      }
+    }
   }
 
   .similarProducts {
