--- a/src/frontend/pages/consumers/OrderPage/OrderPage.module.scss
+++ b/src/frontend/pages/consumers/OrderPage/OrderPage.module.scss
@@ -7,54 +7,103 @@
   display: flex;
   flex-direction: column;
 
-  .details {
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-
-    .summary {
-      align-items: center;
-      cursor: pointer;
-      display: flex;
-      justify-content: space-between;
-      list-style: none;
-
-      > span {
-        font-size: 1.75em;
-      }
-
-      .angleIcon {
-        transition: 0.5s;
-      }
-    }
-
-    &[open] .angleIcon {
-      transform: rotate(180deg);
-      transition: 0.5s;
+  .titleText {
+    display: none;
+    @media screen and (min-width: $burger-menu-screen-width) {
+      display: block;
+      font-size: 2em;
+      font-weight: 600;
+      margin: 1rem auto 0 auto;
     }
   }
 
-  .price {
-    @include wrapper;
-    align-items: center;
-    background-color: $cart-item-bg;
+  .orderContainer {
     display: flex;
-    justify-content: space-between;
-    margin-top: 1rem;
-    padding-top: 1rem !important;
-    padding-bottom: 1rem !important;
-
-    .caption {
-      color: $text-color;
-      font-size: 14px;
+    flex-direction: column;
+    gap: 1rem;
+    @include xl-min {
+      flex-direction: row-reverse;
+      gap: 3rem;
     }
 
-    .sum {
-      color: $text-color;
-      font-size: 16px;
-      font-weight: 500;
+    .orderDetails {
+      flex: 1;
+
+      .details {
+        margin-bottom: 1rem;
+        margin-top: 1rem;
+
+        .summary {
+          align-items: center;
+          cursor: pointer;
+          display: flex;
+          justify-content: space-between;
+          list-style: none;
+
+          > span {
+            font-size: 1.75em;
+          }
+
+          .angleIcon {
+            transition: 0.5s;
+          }
+        }
+
+        &[open] .angleIcon {
+          transform: rotate(180deg);
+          transition: 0.5s;
+        }
+
+        .cartItems {
+          display: grid;
+          gap: 2em;
+          list-style: none;
+          @include md-min {
+            grid-template-columns: repeat(2, 1fr);
+          }
+          @include xl-min {
+            grid-template-columns: repeat(1, 1fr);
+          }
+          @include xxl-min {
+            grid-template-columns: repeat(2, 1fr);
+          }
+
+          .warning {
+            text-align: center;
+            margin: 30px 0;
+          }
+
+          .cartItem {
+            position: relative;
+          }
+        }
+      }
+
+      .price {
+        @include wrapper;
+        align-items: center;
+        background-color: $cart-item-bg;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 1rem;
+        padding-top: 1rem !important;
+        padding-bottom: 1rem !important;
+
+        .caption {
+          color: $text-color;
+          font-size: 14px;
+        }
+
+        .sum {
+          color: $text-color;
+          font-size: 16px;
+          font-weight: 500;
+        }
+      }
     }
   }
 }
+
 .warning {
   text-align: center;
   &:last-child {
