--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -21,11 +21,12 @@ $color-gray-light-1: #afb3af; // input placeholder
 $color-gray-dark-1: #1e1e1c; // main text, input text
 
 $color-green-light-1: #e0ece1; // button bg
+$color-green-light-2: #e4f7ea; // button bg
 $color-green-1: #95d89a; // input border, button bg
 $color-green-2: #85c78a; // input hover
 $color-green-3: #78cd7d; // button bg
 $color-green-dark-1: #6ca170; // input focus
-$color-green-dark-2: #67b06c; // button bg
+$color-green-dark-2: #67b06c; // button bg, button text
 
 $color-red-1: #f32f04; // input border, error, action price
 
