--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -26,6 +26,8 @@ $color-green-2: #85c78a; // input hover
 $color-green-3: #78cd7d; // button bg
 $color-green-dark-1: #6ca170; // input focus
 $color-green-dark-2: #67b06c; // button bg
+$color-green-dark-3: #008000; // success text
+$color-green-dark-4: #008000; // loader
 
 $color-red-1: #f32f04; // input border, error, action price
 
@@ -33,4 +35,9 @@ $burger-menu-screen-width: 900px;
 
 //sizes
 
-$sm: 10px;
+$s: 10px;
+$m: 20px;
+
+//font weight
+
+$semi-bold: 500;
