--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -26,7 +26,7 @@ $color-green-1: #95d89a; // input border, button bg
 $color-green-2: #85c78a; // input hover
 $color-green-3: #78cd7d; // button bg
 $color-green-dark-1: #6ca170; // input focus
-$color-green-dark-2: #67b06c; // button bg
+$color-green-dark-2: #67b06c; // button bg button text
 $color-green-dark-3: #008000; // success text
 $color-green-dark-4: #008000; // loader
 
