restore login fields

--- a/src/frontend/components/consumers/AccountPageComponents/ConsumerData/ConsumerData.module.scss
+++ b/src/frontend/components/consumers/AccountPageComponents/ConsumerData/ConsumerData.module.scss
@@ -84,6 +84,6 @@
   }
 }
 .messageStatus {
-  @include fonts($color: $color-green-dark-3);
+  @include fonts($weight: 500, $color: $color-green-dark-3);
   text-align: center;
 }
