--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -34,11 +34,13 @@ $color-red-1: #f32f04; // input border, error, action price
 
 $burger-menu-screen-width: 900px;
 
-//sizes
-
+//paddings, margins
 $s: 10px;
 $m: 20px;
 
 //font weight
+$font-weight-normal: 400;
+$font-weight-medium: 500;
 
-$semi-bold: 500;
+//font sizes
+$font-size-xl: 20px;
