--- a/src/frontend/pages/consumers/RegistrationPage/RegisterPage.module.scss
+++ b/src/frontend/pages/consumers/RegistrationPage/RegisterPage.module.scss
@@ -6,14 +6,10 @@
   @include wrapper;
 }
 .RegisterForm__title {
-  color: #000;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+  @include fonts($size: $font-size-xl);
 }
 .RegisterForm__form {
-  margin-top: 19px;
+  margin-top: $m;
 }
 .RegisterForm__fieldset {
   margin-bottom: $m;
