--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -88,6 +88,10 @@
 }
 
 @mixin button-2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: $s;
   background-color: $color-green-light-1;
   border: none;
   border-radius: 1rem;
