--- a/src/frontend/components/consumers/Loader/Loader.module.scss
+++ b/src/frontend/components/consumers/Loader/Loader.module.scss
@@ -2,7 +2,14 @@
 @import "@/styles/responsive";
 @import "@/styles/variables";
 
-.loader {
+.Loader__container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.Loader__spiner {
   width: 50px;
   aspect-ratio: 1;
   border-radius: 50%;
