--- a/src/frontend/pages/consumers/ProductPage/ProductPage.module.scss
+++ b/src/frontend/pages/consumers/ProductPage/ProductPage.module.scss
@@ -58,7 +58,7 @@
     }
 
     .price {
-      color: $text-color;
+      color: $color-gray-dark-1;
       font-size: 1.5rem;
       font-weight: 500;
 
@@ -129,7 +129,7 @@
 
     .description {
       max-width: 170px;
-      color: $text-color;
+      color: $color-gray-dark-1;
       font-size: 0.875em;
       font-weight: 400;
       margin-top: 0.5em;
