--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,16 +1,3 @@
-$base-white: #ffffff;
-$dark-gray: #3a3939;
-$light-gray: #949393;
-$red: #ff0000ff;
-$text-color: #000;
-$description-color: #787676;
-$bg-color: #efefef;
-$cart-item-bg: #d9d9d9;
-$measure-color: #929292;
-$icons-color: #000;
-
-/*----------------------------------*/
-
 $color-white: #fff;
 $color-black: #000;
 
@@ -27,8 +14,7 @@ $color-green-2: #85c78a; // input hover
 $color-green-3: #78cd7d; // button bg
 $color-green-dark-1: #6ca170; // input focus
 $color-green-dark-2: #67b06c; // button bg button text
-$color-green-dark-3: #008000; // success text
-$color-green-dark-4: #008000; // loader
+$color-green-dark-3: #008000; // success text, loader
 
 $color-red-1: #f32f04; // input border, error, action price
 
