--- a/src/frontend/components/consumers/ProductItem/ProductItem.module.scss
+++ b/src/frontend/components/consumers/ProductItem/ProductItem.module.scss
@@ -25,7 +25,7 @@
   .information {
     .title {
       text-align: left;
-      color: $text-color;
+      color: $color-gray-dark-1;
       font-size: 12px;
       font-weight: 400;
     }
@@ -42,14 +42,14 @@
         font-weight: 400;
 
         span {
-          color: $text-color;
+          color: $color-gray-dark-1;
           margin-right: 0.5rem;
           text-decoration: line-through;
         }
       }
 
       .price {
-        color: $text-color;
+        color: $color-gray-dark-1;
         font-size: 12px;
         font-weight: 400;
       }
