--- a/src/frontend/components/consumers/ProductList/ProductList.module.scss
+++ b/src/frontend/components/consumers/ProductList/ProductList.module.scss
@@ -1,12 +1,12 @@
-@import '../../../../styles/responsive';
-@import '../../../../styles/mixins';
-@import '../../../../styles/variables';
+@import "../../../../styles/responsive";
+@import "../../../../styles/mixins";
+@import "../../../../styles/variables";
 
 .productList {
   text-align: center;
 
   .title {
-    color: $text-color;
+    color: $color-gray-dark-1;
     font-size: 20px;
     font-weight: 400;
     margin-bottom: 20px;
@@ -14,7 +14,6 @@
       font-size: 2.2rem;
     }
   }
-
 
   .navigation {
     font-size: 1.2rem;
