--- a/src/frontend/pages/consumers/CartPage/CartPage.module.scss
+++ b/src/frontend/pages/consumers/CartPage/CartPage.module.scss
@@ -76,19 +76,19 @@
   .price {
     @include wrapper;
     align-items: center;
-    background-color: $cart-item-bg;
+    background-color: #d9d9d9;
     display: flex;
     justify-content: space-between;
     margin-top: 1rem;
     padding-top: 1rem !important;
 
     .caption {
-      color: $text-color;
+      color: $color-gray-dark-1;
       font-size: 14px;
     }
 
     .sum {
-      color: $text-color;
+      color: $color-gray-dark-1;
       font-size: 16px;
       font-weight: 500;
     }
@@ -96,7 +96,7 @@
 
   .linkToOrder {
     @include wrapper;
-    background-color: $cart-item-bg;
+    background-color: #d9d9d9;
 
     padding-top: 1rem !important;
     padding-bottom: 1rem !important;
