--- a/src/frontend/pages/consumers/OrderPage/OrderPage.module.scss
+++ b/src/frontend/pages/consumers/OrderPage/OrderPage.module.scss
@@ -82,7 +82,7 @@
       .price {
         @include wrapper;
         align-items: center;
-        background-color: $cart-item-bg;
+        background-color: #d9d9d9;
         display: flex;
         justify-content: space-between;
         margin-top: 1rem;
@@ -90,12 +90,12 @@
         padding-bottom: 1rem !important;
 
         .caption {
-          color: $text-color;
+          color: $color-gray-dark-1;
           font-size: 14px;
         }
 
         .sum {
-          color: $text-color;
+          color: $color-gray-dark-1;
           font-size: 16px;
           font-weight: 500;
         }
