--- a/src/frontend/pages/consumers/LoginPage/LoginPage.module.scss
+++ b/src/frontend/pages/consumers/LoginPage/LoginPage.module.scss
@@ -8,7 +8,7 @@
 .RegisterForm__form {
   margin-bottom: $m;
 }
-.LoginForm__fieldset {
+.LoginForm__inputWrapper {
   margin-bottom: $m;
 }
 .LoginForm__container {
