--- a/src/frontend/pages/consumers/RegistrationPage/RegisterPage.module.scss
+++ b/src/frontend/pages/consumers/RegistrationPage/RegisterPage.module.scss
@@ -11,7 +11,7 @@
 .RegisterForm__form {
   margin-top: $m;
 }
-.RegisterForm__fieldset {
+.RegisterForm__inputWrapper {
   margin-bottom: $m;
 }
 .RegisterForm__errorMsg {
