--- a/src/frontend/components/consumers/Footer/Footer.module.scss
+++ b/src/frontend/components/consumers/Footer/Footer.module.scss
@@ -1,8 +1,10 @@
-@import '../../../../styles/responsive';
-@import '../../../../styles/mixins';
+@import "../../../../styles/responsive";
+@import "../../../../styles/mixins";
+@import "../../../../styles/variables";
 
 .footer {
-  background-color: #d4d4d4;
+  background-color: #eee;
+  border-top: 1px solid $color-gray-light-1;
   padding: 20px 0;
   margin-top: 16px;
 
@@ -18,9 +20,32 @@
       .section1 {
         height: 100%;
 
-        h2 {
-          font-size: 2rem;
-          font-weight: 600;
+        .logo {
+          cursor: pointer;
+          color: $color-gray-dark-1;
+          font-size: 24px;
+          font-weight: 400;
+          text-decoration: none;
+        }
+
+        .list {
+          color: $color-gray-dark-1;
+          list-style: none;
+          margin-top: 1rem;
+
+          .listItem {
+            font-size: 0.9rem;
+            line-height: 2rem;
+            text-decoration: none;
+            @include md-min {
+              font-size: 1.1rem;
+            }
+
+            a {
+              color: inherit;
+              text-decoration: none;
+            }
+          }
         }
       }
 
@@ -46,6 +71,5 @@
     .copyright {
       font-size: 0.8rem;
     }
-  
   }
 }
