--- a/src/frontend/components/consumers/HomePageComponents/Banner/Banner.module.scss
+++ b/src/frontend/components/consumers/HomePageComponents/Banner/Banner.module.scss
@@ -1,6 +1,6 @@
-@import "../../../../styles/responsive";
-@import "../../../../styles/mixins";
-@import "../../../../styles/variables";
+@import "../../../../../styles/responsive";
+@import "../../../../../styles/mixins";
+@import "../../../../../styles/variables";
 
 .banner {
   background-color: #efefef;
