--- a/src/frontend/components/consumers/Fields/Field.module.scss
+++ b/src/frontend/components/consumers/Fields/Field.module.scss
@@ -4,10 +4,6 @@
 
 .Field__input {
   @include input-1;
-  margin-bottom: $s;
-}
-.Field__pswdInput {
-  @include input-1;
 }
 
 .Field__label_marginBottom {
@@ -16,26 +12,26 @@
 }
 
 .Field__label:has(+ input:valid),
-.Field__label:has(+ .Field__pswdContainer input:valid) {
+.Field__label:has(+ .Field__inputWrapper input:valid) {
   @include validData;
 }
 .Field__label:has(+ input:invalid),
-.Field__label:has(+ .Field__pswdContainer input:invalid) {
+.Field__label:has(+ .Field__inputWrapper input:invalid) {
   @include invalidData;
 }
 .Field__errorMsg {
   @include invalidData;
 }
 input:invalid + .Field__errorMsg,
-.Field__pswdContainer:has(input:invalid) + .Field__errorMsg {
+.Field__inputWrapper:has(input:invalid) + .Field__errorMsg {
   display: block;
+  margin-top: $s;
 }
 input:valid + .Field__errorMsg,
-.Field__pswdContainer:has(input:valid) + .Field__errorMsg {
+.Field__inputWrapper:has(input:valid) + .Field__errorMsg {
   display: none;
 }
-.Field__pswdContainer {
-  margin-bottom: $s;
+.Field__inputWrapper {
   position: relative;
 }
 
@@ -56,4 +52,20 @@ input:valid + .Field__errorMsg,
 }
 .Field__pswdShowIcon_visible {
   color: $color-gray-dark-1;
+}
+.Field__optionList {
+  max-height: 200px;
+  position: absolute;
+  top: 100%;
+  overflow: auto;
+  list-style: none;
+  background: $color-bg-light-2;
+  @include shadow;
+  & > li {
+    padding: $s $m;
+    cursor: pointer;
+  }
+  & > li:hover {
+    background: $color-green-2;
+  }
 }
