--- a/src/frontend/components/consumers/BlogItem/BlogItem.module.scss
+++ b/src/frontend/components/consumers/BlogItem/BlogItem.module.scss
@@ -11,12 +11,14 @@
     .title {
       color: $color-gray-dark-1;
       font-size: 1.5rem;
-      text-align: center;
       margin-bottom: 1rem;
+      text-align: center;
 
       a {
         color: inherit;
         text-decoration: none;
+        transition: all 0.2s;
+        width: 100%;
         &:hover {
           color: $color-green-dark-2;
         }
@@ -43,12 +45,17 @@
       .imageWrapper {
         height: 200px;
         margin-bottom: 1rem;
+        overflow: hidden;
         position: relative;
 
         .image {
           display: block;
           object-fit: cover;
           position: relative !important;
+          transition: all 0.4s;
+          &:hover {
+            transform: scale(1.1);
+          }
         }
       }
 
@@ -65,6 +72,7 @@
     margin-top: 0.25rem;
     text-align: right;
     text-decoration: none;
+    transition: all 0.2s;
     &:hover {
       color: $color-green-dark-2;
     }
