--- a/src/frontend/components/consumers/Button/Button.module.scss
+++ b/src/frontend/components/consumers/Button/Button.module.scss
@@ -4,4 +4,12 @@
 
 .button {
   @include button-2;
+  height: fit-content;
+  margin-inline: auto;
+  font-size: 1.125rem;
+  transition: all 0.2s;
+  max-width: 360px !important;
+  @media screen and (min-width: 768px) {
+    margin-inline: 0;
+  }
 }
