--- a/src/frontend/components/consumers/Footer/Footer.module.scss
+++ b/src/frontend/components/consumers/Footer/Footer.module.scss
@@ -45,6 +45,10 @@
               color: inherit;
               text-decoration: none;
             }
+
+            &:hover {
+              color: $color-green-dark-2;
+            }
           }
         }
       }
