--- a/src/frontend/components/consumers/HomePageComponents/Blog/Blog.module.scss
+++ b/src/frontend/components/consumers/HomePageComponents/Blog/Blog.module.scss
@@ -17,6 +17,10 @@
       color: inherit;
       text-decoration: none;
     }
+
+    &:hover {
+      color: $color-green-dark-2;
+    }
   }
 
   .articles {
