--- a/src/frontend/pages/consumers/ProductPage/ProductPage.module.scss
+++ b/src/frontend/pages/consumers/ProductPage/ProductPage.module.scss
@@ -5,7 +5,6 @@
 .productCard {
   @include wrapper;
   display: grid;
-  justify-content: center;
   margin-top: 4em;
   margin-bottom: 6em;
   width: 100%;
@@ -30,10 +29,12 @@
   }
 
   .imageContainer {
-    height: 320px;
+    aspect-ratio: 1/1;
+    max-height: 600px;
     max-width: 600px;
     min-width: 240px;
     position: relative;
+    width: 100%;
     @media screen and (min-width: 768px) {
       grid-column: 1/2;
       grid-row: 1/-1;
@@ -41,20 +42,24 @@
 
     .imageProduct {
       object-fit: cover;
+      position: relative !important;
     }
 
     .heartIconContainer {
       position: absolute;
       top: 1rem;
       right: 1rem;
+      z-index: 5;
     }
   }
 
   .priceInformation {
+    margin-block: 2rem;
     text-align: left;
     @media screen and (min-width: 768px) {
       grid-column: 2/3;
       grid-row: 2/3;
+      margin-block: 0rem;
     }
 
     .price {
@@ -101,11 +106,13 @@
   .characteristic {
     border-radius: 1em;
     border: 1px solid $color-gray-dark-1;
+    margin-top: 2rem;
     padding: 1em;
     @media screen and (min-width: 768px) {
       border: none;
       grid-column: 2/3;
       grid-row: 3/4;
+      margin-top: 0rem;
     }
 
     .headline {
