--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@ $color-black: #000;
 $color-bg-light-1: #fafafa; // main background
 $color-bg-light-2: #fffdf9; // input background
 
-$color-gray-light-1: #afb3af; // input placeholder
+$color-gray-light-1: #afb3af; // input placeholder, product measure
 $color-gray-dark-1: #1e1e1c; // main text, input text
 
 $color-green-light-1: #e0ece1; // button bg
@@ -13,7 +13,7 @@ $color-green-1: #95d89a; // input border, button bg
 $color-green-2: #85c78a; // input hover
 $color-green-3: #78cd7d; // button bg
 $color-green-dark-1: #6ca170; // input focus
-$color-green-dark-2: #67b06c; // button bg button text
+$color-green-dark-2: #67b06c; // button bg, button text, links hover
 $color-green-dark-3: #008000; // success text, loader
 
 $color-red-1: #f32f04; // input border, error, action price
