--- a/src/frontend/components/consumers/Fields/Field.module.scss
+++ b/src/frontend/components/consumers/Fields/Field.module.scss
@@ -56,6 +56,7 @@ input:valid + .Field__errorMsg,
 .Field__optionList {
   max-height: 200px;
   position: absolute;
+  z-index: 1;
   top: 100%;
   overflow: auto;
   list-style: none;
